# livro-e-cia

./: .env-example  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  Rocket.toml  diesel.toml  docker-compose.yml
backend/: Cargo.toml  diesel.toml
backend/migrations/2025-11-25-120440-0000_create_roles/: down.sql  up.sql
backend/migrations/2025-11-25-124225-0000_create_users/: down.sql  up.sql
backend/migrations/2025-12-01-184755-0000_create_refresh_tokens/: down.sql  up.sql
backend/migrations/2025-12-03-103805-0000_create_categories/: down.sql  up.sql
backend/migrations/2025-12-03-104417-0000_create_products/: down.sql  up.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  schema.rs
backend/src/auth/: guards.rs  jwt.rs  mod.rs  password.rs  refresh.rs
backend/src/db/: pool.rs
backend/src/email/: mock.rs  mod.rs  service.rs  smtp.rs
backend/src/fairings/: mod.rs  security_headers.rs
backend/src/models/: category.rs  mod.rs  product.rs  refresh_token.rs  roles.rs  user.rs
backend/src/rate_limit/: config.rs  guards.rs  limiter.rs  mod.rs
backend/src/redis/: pool.rs
backend/src/routes/: auth.rs  employees.rs  mod.rs  products.rs
backend/src/utils/: mod.rs  pagination.rs  uuid_ext.rs  validation.rs
backend/tests/: auth_tests.rs  employees_tests.rs  products_tests.rs  security_tests.rs
backend/tests/common/: auth_helpers.rs  fixtures.rs  mod.rs  test_app.rs
frontend/: Cargo.toml
frontend/src/: main.rs
migrations/: 20260112114105_create_roles.sql  20260112114424_create_employees.sql  20260112115846_create_categories.sql  20260112120045_create_products.sql  20260112125137_create_payment_method_enum.sql  20260112125347_create_sales.sql  20260112125600_create_sale_items.sql  20260112125655_create_stock_trigger.sql  20260115151000_create_refresh_token_families.sql  20260219000000_add_partial_indexes.sql
migrations/2026-01-12-114105-0000_create_roles/: up.sql
migrations/2026-01-12-114424-0000_create_employees/: down.sql  up.sql
migrations/2026-01-12-114424-0000_create_users/: down.sql  up.sql
migrations/2026-01-12-115846-0000_create_categories/: up.sql
migrations/2026-01-12-120045-0000_create_products/: up.sql
migrations/2026-01-12-125137-0000_create_payment_method_enum/: down.sql
migrations/2026-01-12-125347-0000_create_sales/: up.sql
migrations/2026-01-12-125600-0000_create_sale_items/: up.sql
migrations/2026-01-12-125655-0000_create_stock_trigger/: down.sql  up.sql
migrations/2026-01-15-151000-0000_create_refresh_token_families/: up.sql
shared/: Cargo.toml
shared/src/: lib.rs
src/: config.rs  db.rs  error.rs  main.rs  schema.rs
src/auth/: claims.rs  cookie.rs  guards.rs  mod.rs  password.rs  tokens.rs
src/models/: category.rs  employee.rs  employees.rs  forms_models.rs  mod.rs  payment_method.rs  product.rs  role.rs  sale.rs  sale_item.rs  user.rs  views_models.rs
src/repositories/: employee_repo.rs  mod.rs
src/routes/: mod.rs
templates/: base.html  error.html
