[package]
name = "livro-e-cia"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono", "uuid", "numeric"] }
diesel_migrations = "2.3"
uuid = { version = "1.19", features = ["v4", "serde"] }
rust_decimal = { version = "1.39", features = ["db-diesel2-postgres", "serde-with-str"] }
chrono = { version = "0.4", features = ["serde"]}

# Environment Variables
dotenvy = "0.15"

# Web framework
rocket = { version = "0.5", features = ["uuid", "secrets"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }

# Authentication
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
argon2 = "0.5"
rand = "0.9"
time = "0.3"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
