[package]
name = "livro-e-cia"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["cookie-private"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }

# Templates
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }

# Database
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
  "chrono",
  "rust_decimal",
  "migrate",
] }
uuid = { version = "1.19", features = ["v4", "serde"] }
rust_decimal = { version = "1.39", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
argon2 = "0.5"
rand = "0.10"

# Environment variables
dotenvy = "0.15"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
