[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Shared dependencies from workspace
rust_decimal = { version = "1.39", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
